[alloc @ alla@cyber.com.au-20071107031335-qke72luh1cmm633f] Fixed calendar stylesheet for printer friendly view. (Which became broken once the new popup calendars were added, since they use the .calendar class too. Naming conflict bugs suck arse).

--- a/css/print.css
+++ b/css/print.css
@@ -3,7 +3,7 @@
 #tabs,
 table.box th.right,
 table.filter,
-table.calendar img {
+table.alloc_calendar img {
   display: none;
 }
 
@@ -21,7 +21,7 @@ td.tasks {
   background-color: #eaf3ff; 
   padding:4px;
 }
-table.tasks th, table.calendar th {
+table.tasks th, table.alloc_calendar th {
   border-bottom:0px;
   font-weight:bold;
   white-space:nowrap;
@@ -34,44 +34,44 @@ table.tasks th, table.calendar th {
 }
 
 
-table.calendar { 
+table.alloc_calendar { 
   width:100%; 
   border-right:1px solid #808080; 
   border-bottom:1px solid #808080;
 } 
-table.calendar td { 
+table.alloc_calendar td { 
   border-left:1px solid #808080;  
   border-top:1px solid #808080; 
   width:10%; vertical-align:top;
   font-size:smaller;
 }
-table.calendar td.today { 
+table.alloc_calendar td.today { 
   border-top:2px solid #808080;  
   border-left:2px solid #808080;  
   border-right:1px solid #808080;  
   border-bottom:1px solid #808080; 
 }
-table.calendar td.today h1 {
+table.alloc_calendar td.today h1 {
   font-weight:bold;
 }
-table.calendar td.even { 
+table.alloc_calendar td.even { 
   background-color:#f0f0f0; 
 }
-table.calendar td.absent {
+table.alloc_calendar td.absent {
   background-color:#cccccc;
   color:#999999;
 }
-table.calendar td.absent h1{
+table.alloc_calendar td.absent h1{
   color:#999999;
 }
-table.calendar h1 {
+table.alloc_calendar h1 {
   text-align:right;
   font-size:12px;
   margin:0px;
   padding:3px;
   font-weight:normal;
 }
-table.calendar img {
+table.alloc_calendar img {
   float:left;
   margin:0px;
 }
